# kynara

./: .gitignore  CONNECTOR_SUBMISSION.md  Kynara_Use_Cases.docx  MIGRATION_GUIDE.md  OPERATIONALIZE.md  README.md  STAGING_SETUP.md  TESTING_GUIDE.md  TESTING_GUIDE_UI.md  agent-governance.skill  approvals.skill  commit-and-push.ps1  docker-compose.tier0-tier1.yml  kynara.plugin  narration_script.txt  permission-check.skill  railway.toml  setup_infrastructure.py  zihMqqe4
backend/: entrypoint.sh  pyproject.toml  railway.toml  requirements.txt
backend/app/: main.py
backend/app/anomaly/: __init__.py
backend/app/api/: mcp_server.py
backend/app/audit/: service.py
backend/app/auth/: dependencies.py  passwords.py  tokens.py
backend/app/billing/: quota.py  stripe_service.py
backend/app/core/: config.py  email.py  encryption.py  geoip.py  limiter.py  ssrf.py  telemetry.py
backend/app/idp/: __init__.py  okta.py  sync.py
backend/app/integrations/: email_notify.py  notify.py  pagerduty.py  slack.py  teams.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  agent.py  agent_credential.py  agent_idp.py  audit.py  billing.py  delegation_grant.py  git_connection.py  guardrail.py  jit_grant.py  oauth.py  (+9 more)
backend/kynara_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_mcp_gateway.py  test_okta_idp.py  test_taint_engine.py
sdk/: README.md  pyproject.toml
sdk/examples/: anthropic_tool_use.py  autogen_agent.py  bedrock_agent.py  langgraph_agent.py  llamaindex_agent.py  semantic_kernel_agent.py  vertex_agent.py
sdk/kynara_sdk/: __init__.py  client.py  errors.py
(+354 files in other folders)
