[project]
name = "kynara-backend"
version = "0.1.0"
description = "Kynara control plane — AI agent permission system"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "asyncpg>=0.29",
  "alembic>=1.13",
  "argon2-cffi>=23.1",
  "pyjwt[crypto]>=2.8",
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "authlib>=1.3",           # OIDC client
  "python3-saml>=1.16",     # SAML 2.0 SP
  "redis>=5.0",
  "stripe>=9.0",
  "structlog>=24.1",
  "opentelemetry-api>=1.24",
  "opentelemetry-sdk>=1.24",
  "opentelemetry-instrumentation-fastapi>=0.45b0",
  "opentelemetry-exporter-otlp>=1.24",
  "prometheus-client>=0.20",
  "slowapi>=0.1.9",
  "email-validator>=2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.3",
  "mypy>=1.9",
  "httpx>=0.27",
]
aws = [
  "boto3>=1.34",             # Required when KYNARA_KMS_BACKEND=aws
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
