[project]
name = "kynara-sdk"
version = "0.1.0"
description = "Runtime enforcement SDK for AI agents built on the Kynara control plane."
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.2",
  "pydantic>=2.6",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1"]
dev = ["pytest>=8.0", "respx>=0.20"]

[tool.ruff]
line-length = 100
target-version = "py310"
